...
    android:layout_height="96dp"
    android:clickable="true"
    android:orientation="vertical"
    tools:background="#EFEFEF">

    <ImageView
        android:id="@+id/iv_pendahuluan_gambar"
        android:layout_width="48dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
...
